syntax="proto3";

option go_package="protos/clientProto";

service ClientService{
    rpc CreateClient(ClientInfo) returns (ClientID){}
    rpc GetClientById(ClientID) returns (ClientInfo){}
    rpc GetAllClients(Empty) returns(stream ClientInfo){}
    rpc GetClientLocation(ClientID)returns(ClientLocation){}
    rpc DeleteClient(ClientID) returns(ClientResponse){}
}

message Empty {}

message ClientResponse {
    string status = 1 ;
}
message ClientID {
    string  id = 1 ;
}

message ClientInfo {
    string id = 1 ;
    string name = 2;
    string email = 3;
    string phone =4;
    string created_at = 5;
    Address address = 6;
}

message Address {
    string city = 1;
    string region = 2;
    string home_address = 3; 
}

message ClientLocation {
    string id = 1;
    string phone = 2;
    string email = 3;
    Address Address = 4;
}